lambda/todo-spring-api/k8s/sample/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /apple
            pathType: ImplementationSpecific
            backend:
              service:
                name: apple-service
                port:
                  number: 5678
          - path: /banana
            pathType: ImplementationSpecific
            backend:
              service:
                name: banana-service
                port:
                  number: 5678
